fix: #1, parents are supported, use statements are supported

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
-      "BigBIT\\Oddin\\": "src/"
+      "BigBIT\\Oddin\\": "src/",
+      "BigBIT\\Oddin\\Examples\\": "examples/"
     }
   },
   "require": {
