--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "php": "^7.2.0"
   },
   "require-dev": {
+    "symfony/console": "^4.3",
     "symfony/cache": "^4.3",
     "phpstan/phpstan": "^0.11.12",
     "phpunit/phpunit": "^8.2"
