--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,15 @@
   "require-dev": {
     "symfony/console": "^4.3",
     "symfony/cache": "^4.3",
-    "phpstan/phpstan": "^0.11.12",
     "phpunit/phpunit": "^8.2"
   },
 
   "scripts": {
     "test": "phpunit --configuration config/phpunit.xml",
     "stan": "phpstan analyse --level 7 -c config/phpstan.neon src examples"
-  }
+  },
+
+  "bin": [
+    "cli"
+  ]
 }
