created bootstrap classes, added slim support

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   "autoload": {
     "psr-4": {
       "BigBIT\\Oddin\\": "src/",
+      "BigBIT\\Oddin\\Support\\": "support/",
       "BigBIT\\Oddin\\Examples\\": "examples/"
     }
   },
