--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "symfony/console": "^4.3",
     "symfony/cache": "^4.3",
     "phpunit/phpunit": "^8.2",
-    "phpstan/phpstan": "^0.11.15"
+    "phpstan/phpstan": "^0.11.15",
+    "tracy/tracy": "^2.6"
   },
 
   "scripts": {
