--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
 
   "scripts": {
     "test": "phpunit --configuration config/phpunit.xml",
-    "stan": "phpstan analyse --level 7 -c phpstan.neon src examples"
+    "stan": "phpstan analyse --level 7 -c config/phpstan.neon src examples"
   },
 
   "bin": [
