--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,23 @@
       "BigBIT\\Oddin\\Examples\\": "examples/"
     }
   },
+  "scripts": {
+    "test": "phpunit --configuration config/phpunit.xml",
+    "stan": "phpstan analyse --level 7 -c config/phpstan.neon src examples"
+  },
+
+  "bin": [
+    "oddin"
+  ],
+
+  "extra": {
+    "laravel": {
+      "providers": [
+        "BigBIT\\Oddin\\Support\\laravel\\Provider"
+      ]
+    }
+  },
+
   "require": {
     "psr/simple-cache": "^1.0",
     "bigbit/di-bootstrap": "^1.0.0",
@@ -33,14 +50,5 @@
 
   "suggest": {
     "bigbit/smart-di": "~1.0.0"
-  },
-
-  "scripts": {
-    "test": "phpunit --configuration config/phpunit.xml",
-    "stan": "phpstan analyse --level 7 -c config/phpstan.neon src examples"
-  },
-
-  "bin": [
-    "oddin"
-  ]
+  }
 }
