--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
   "autoload": {
     "psr-4": {
       "BigBIT\\Oddin\\": "src/",
-      "BigBIT\\Oddin\\Support\\": "support/",
       "BigBIT\\Oddin\\Examples\\": "examples/"
     }
   },
@@ -41,6 +40,7 @@
   },
 
   "suggest": {
-    "bigbit/smart-di": "~1.0.0"
+    "bigbit/smart-di": "~1.0.0",
+    "symfony/cache": "^4.3"
   }
 }
