--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,13 @@
 
   "require": {
     "psr/simple-cache": "^1.0",
-    "bigbit/di-bootstrap": "^1.0.0",
 
     "php": "^7.4.0"
   },
   "require-dev": {
+    "bigbit/di-bootstrap": "~2.0.0",
+    "bigbit/smart-di": "~2.0.0",
+
     "symfony/console": "^4.3",
     "symfony/cache": "^4.3",
     "phpunit/phpunit": "^8.2",
