--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   "require": {
     "psr/simple-cache": "^1.0",
 
-    "php": "7.4.0"
+    "php": "~7.4.0"
   },
   "require-dev": {
     "bigbit/di-bootstrap": "~2.0.0",
